<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.sistemmedico.CadastroUsuario">

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="224dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Nome"
        android:layout_marginLeft="67dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/editTextCpf"
        android:layout_width="226dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="CPF"
        android:layout_marginLeft="67dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextNome"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="228dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Email"
        android:layout_marginLeft="67dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextCpf"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/editTextIdade"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="date"
        android:layout_marginLeft="67dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/txtViewFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtViewFoto"
        android:layout_marginLeft="74dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/imageView"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextIdade"
        android:layout_marginStart="74dp"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="119dp"
        android:layout_height="114dp"
        app:srcCompat="@drawable/medico"
        android:layout_marginRight="75dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextIdade"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="75dp" />

    <Button
        android:id="@+id/btnFoto"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btnFoto"
        tools:layout_editor_absoluteY="288dp"
        app:layout_constraintRight_toLeftOf="@+id/imageView"
        android:layout_marginRight="9dp" />

    <EditText
        android:id="@+id/editTextSenha1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Senha"
        android:layout_marginLeft="85dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/editTextSenha2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Confirmar Senha"
        android:layout_marginLeft="85dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastro"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextSenha1"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/btnCadastro"
        android:layout_width="121dp"
        android:layout_height="48dp"
        android:text="@string/btnCadastro"
        android:layout_marginLeft="132dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="8dp" />

</android.support.constraint.ConstraintLayout>
